# tauri-react-template

./: package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  bindings.ts  layout.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  window_state.rs
src/components/: app-title-bar.tsx
src/components/controls/: index.ts  window-controls.tsx  window-titlebar.tsx
src/components/controls/components/: button.tsx  icons.tsx
src/components/controls/components/controls/: macos.tsx  windows.tsx
src/components/controls/components/controls/linux/: gnome.tsx
src/components/controls/contexts/: plugin-window.tsx
src/components/controls/lib/: plugin-os.ts
